# taskmaster

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs  tui.rs
src/app/: mod.rs  state.rs
src/handlers/: input.rs  mod.rs
src/models/: mod.rs  todo_item.rs
src/storage/: file.rs  mod.rs
src/ui/: components.rs  mod.rs  theming.rs
