[package]
name = "taskmaster"
version = "0.1.0"
authors = ["Jeppe Lillevang Salling"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] } 
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
ratatui = "0.28.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tempfile = "3.12.0"
